Direct users to section under settings

--- a/site/guide/attestation/set-up-attestations.qmd
+++ b/site/guide/attestation/set-up-attestations.qmd
@@ -35,17 +35,19 @@ Setting up attestations involves adding an attestation, configuring the attestat
 
 ## Add attestations
 
-1. In the left sidebar, click **{{< fa gear >}} Settings** > **{{< fa clipboard-check >}}  Attestations**.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Click **{{< fa plus >}} Add New Attestation**.
+2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations**.
 
-3. Enter a name for the attestation.
+3. Click **{{< fa plus >}} Add New Attestation**.
 
-4. Enter a description.
+4. Enter a name for the attestation.
 
-5. Click **Add Attestation**.
+5. Enter a description.
 
-6. [Configure the attestation](#configure-attestations).
+6. Click **Add Attestation**.
+
+7. [Configure the attestation](#configure-attestations).
 
 ## Configure attestations
 
@@ -67,17 +69,19 @@ Attestation periods reflect the time zone of the user setting up attestation and
 
 :::
 
-1. Under **{{< fa gear >}} Settings** > **{{< fa clipboard-check >}}  Attestations**, click an attestation to configure.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Click **{{< fa plus >}} Add Attestation Period**.
+2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click an attestation to configure.
 
-3. Enter a name for the attestation period, such as `Quarterly attestation`.
+3. Click **{{< fa plus >}} Add Attestation Period**.
 
-4. Set the start date for the attestation period.
+4. Enter a name for the attestation period, such as `Quarterly attestation`.
 
-5. Set the end date when the attestation period ends.
+5. Set the start date for the attestation period.
 
-6. Click **Add Period**.
+6. Set the end date when the attestation period ends.
+
+7. Click **Add Period**.
 
  When the attestation period begins, the system triggers the process automatically. Model owners are then notified via a banner on their dashboard prompting them to complete the attestation questionnaire.
 
@@ -85,9 +89,11 @@ Attestation periods reflect the time zone of the user setting up attestation and
 
 By default, attestations include the model name. Add additional model inventory fields as needed:
 
-1. Under **{{< fa gear >}} Settings** > **{{< fa clipboard-check >}}  Attestations**, click an attestation to configure.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under **Relevant Attestation Fields**, drag model inventory fields between columns:
+2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click an attestation to configure.
+
+3. Under **Relevant Attestation Fields**, drag model inventory fields between columns:
 
    - **Model Inventory Fields** — Available fields from the model inventory
    - **Relevant Attestation Fields** — Selected fields to display in model snapshots
@@ -109,9 +115,11 @@ ___
 [How do I create meaningful attestation questionnaires?](/guide/attestation/working-with-attestations.qmd#how-do-i-create-meaningful-attestation-questionnaires)
 :::
 
-1. Under **{{< fa gear >}} Settings** > **{{< fa clipboard-check >}}  Attestations**, click the attestation you want to configure.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under **Questionnaire Template**, click the template area to edit. You can add rich text fields such as:
+2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation you want to configure.
+
+3. Under **Questionnaire Template**, click the template area to edit. You can add rich text fields such as:
 
    - Instructions 
    - Links to guidelines
@@ -121,7 +129,7 @@ ___
 
    ![A screenshot of the questionnaire template editor](edit-questionnaire-template.gif){width=100% fig-alt="An animation of the questionnaire template editor showing the process of adding a question about documentation of compliance to the template with the instructions to confirm that required documentation, such as model documentation, validation reports, and change logs, has been completed." .screenshot}
 
-3. After you complete your edits, click **Save**.
+4. After you complete your edits, click **Save**.
 
 The attestation questionnaire is now ready to be be used in future attestation instances, to be completed by model owners and reviewed and signed off by validators.
 
@@ -133,33 +141,39 @@ These steps are optional and not required to set up attestation — **perform on
 
 For testing purposes only, you can trigger the attestation process: 
 
-1. Under **{{< fa gear >}} Settings** > **{{< fa clipboard-check >}}  Attestations**, click the attestation to test.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Execute Schedule**.
+2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation to test.
 
-3. Click **Confirm**.
+3. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Execute Schedule**.
+
+4. Click **Confirm**.
 
 After executing the schedule, the dashboard of the model owner displays a banner notification that the attestation is ready to be completed.
 
 ## Edit attestation periods
 
-1. Under **{{< fa gear >}} Settings** > **{{< fa clipboard-check >}}  Attestations**, click the attestation period to edit.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Edit**.
+2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation period to edit.
 
-3. Make changes to one of the following:
+3. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Edit**.
+
+4. Make changes to one of the following:
 
    - Name
    - Start date
    - End date
 
-4. Click **Save Period**.
+5. Click **Save Period**.
 
 Edits to an attestation period will be effective for future occurrences but do not affect previous or in-progress attestation periods.
 
 ## Remove attestation periods
 
-1. Under **{{< fa gear >}} Settings** > **{{< fa clipboard-check >}}  Attestations**, click the attestation to remove.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation to remove.
 
 2. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Remove**.
 
