Add paragraph about planning attestation periods

--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -71,6 +71,8 @@ The platform maintains a history of all status changes and notes.
 
 The model owner is responsible for completing the questionnaire and addressing change requests from their reviewer. In turn, the validator is responsible for reviewing the questionnaire, requesting any necessary changes, and signing off.
 
+Plan your attestation periods ahead of time to ensure they can be completed on time. The start date must be today or a future date, and you cannot set a date in the past to trigger attestation retroactively.
+
 ## How do I create meaningful attestation questionnaires?
 
 Attestation questionnaires are typically used in model risk management to confirm that key controls, governance processes and documentation requirements have been followed throughout a model's lifecycle. These questionnaires are part of a broader effort to ensure accountability and regulatory compliance. 
