--- a/site/releases/2025/2025-apr-08/release-notes.qmd
+++ b/site/releases/2025/2025-apr-08/release-notes.qmd
@@ -2,6 +2,15 @@
 title: "April 8, 2025"
 date: 2025-04-08
 subtitle: "Unified version `23.03.05`"
+listing:
+  - id: development-series
+    type: grid
+    grid-columns: 1
+    max-description-length: 250
+    contents:
+    - path: ../../../developer/validmind-library.qmd#for-model-development
+      title: "{{< var vm.product >}} for model development {{< fa chevron-right >}}"
+      description: "Learn how to use {{< var vm.product >}} for your end-to-end model documentation process based on common model development scenarios with our series of four introductory notebooks."
 ---
 
 DON'T FORGET THE SUMMARY
@@ -16,28 +25,41 @@ Our documentation now follows the new **unified versioning scheme** for our soft
 
 ### {{< var validmind.developer >}} (v2.8.13)
 
+#### Jupyter Notebooks
+
 <!---
 PR #326: Restructured old "Introduction for model developers" notebook
 URL: https://github.com/validmind/validmind-library/pull/326
 Labels: documentation, highlight
 --->
-#### Restructured old introduction for model developers notebook
+##### New introduction for model development notebook series
 
-We've revamped our Introduction for model developers notebook into a series of four introductory notebooks — ValidMind for model development:
+We've revamped our old *Introduction for model developers* notebook into a series of four introductory notebooks — **ValidMind for model development:**
 
-- 101 Set up the ValidMind Library
-- 102 Start the model development process
-- 103 Integrate custom tests
-- 104 Finalize testing and documentation
+1. Set up the ValidMind Library
+2. Start the model development process
+3. Integrate custom tests
+4. Finalize testing and documentation
 
-These new notebooks break down using ValidMind for your end-to-end model documentation process based on common model development scenarios. Learn the basics of the ValidMind Library with these interactive notebooks designed to introduce you to basic ValidMind concepts and get you familiar with tasks such as how to work with documentation templates, running and logging tests with ValidMind, and more. After you've completed your learning journey with these notebooks, you'll have a fully documented sample model ready for review.
+::: {.column-margin}
+:::{#development-series}
+:::
+
+[{{< fa brands github >}} Access Notebooks on GitHub](https://github.com/validmind/validmind-library/tree/main/notebooks/tutorials/model_development){.button .button-green target="_blank"}
+
+:::
+
+These new notebooks break down using ValidMind for your end-to-end model documentation process based on common model development scenarios:
+
+- Learn the basics of the ValidMind Library with these interactive notebooks designed to introduce you to basic ValidMind concepts and get you familiar with tasks such as how to work with documentation templates, running and logging tests with ValidMind, and more.
+- After you've completed your learning journey with these notebooks, you'll have a fully documented sample model ready for review.
 
 <!---
 PR #280: [SC-7864] Create credit risk scorecard notebook using XGBoost
 URL: https://github.com/validmind/validmind-library/pull/280
 Labels: enhancement
 --->
-#### Create credit risk scorecard notebook using `XGBoost`
+##### Create credit risk scorecard notebook using `XGBoost`
 
 Add new application scorecard notebooks using ML with additional testing
 
@@ -61,7 +83,7 @@ PR #290: [SC-8008] Ongoing monitoring notebook for application scorecard model
 URL: https://github.com/validmind/validmind-library/pull/290
 Labels: enhancement
 --->
-#### Ongoing monitoring notebook for application scorecard model
+##### Ongoing monitoring notebook for application scorecard model
 
 Add two new notebooks for the scorecard model:
 
@@ -81,13 +103,15 @@ The library also sees improvements in dataset loading, preprocessing, and featur
 
 These updates enhance your ability to manage and monitor credit risk models effectively while providing increased flexibility and valuable insights into model performance.
 
+#### Python Library API
+
 
 <!---
 PR #295: feat: add print_env function
 URL: https://github.com/validmind/validmind-library/pull/295
 Labels: enhancement
 --->
-#### Add `print_env` function
+##### Add `print_env` function
 
 Add `validmind.print_env()` function to dump running environment
 
@@ -111,7 +135,7 @@ PR #285: John6797/sc 7792/add raw data to validmind library tests
 URL: https://github.com/validmind/validmind-library/pull/285
 Labels: enhancement
 --->
-#### Add raw data to `validmind` library tests
+##### Add raw data to `validmind` library tests
 
 Adding raw data storage
 
@@ -134,7 +158,7 @@ PR #263: Add Initial Support for Post-Processing Functions
 URL: https://github.com/validmind/validmind-library/pull/263
 Labels: enhancement, highlight
 --->
-#### Add initial support for post-processing functions
+##### Add initial support for post-processing functions
 
 Adding support for post-processing functions
 
