Add icons, fix color

--- a/site/guide/attestation/set-up-attestations.qmd
+++ b/site/guide/attestation/set-up-attestations.qmd
@@ -157,7 +157,7 @@ After executing the schedule, the dashboard of the model owner displays a banner
 
 2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation period to edit.
 
-3. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Edit**.
+3. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **{{< fa pencil >}} Edit**.
 
 4. Make changes to one of the following:
 
@@ -175,7 +175,7 @@ Edits to an attestation period will be effective for future occurrences but do n
 
 2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation to remove.
 
-2. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Remove**.
+2. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select [**{{< fa trash >}} Remove**]{.red}.
 
 3. Click **Delete** to confirm the removal.
 
