--- a/site/releases/2025/2025-apr-08/release-notes.qmd
+++ b/site/releases/2025/2025-apr-08/release-notes.qmd
@@ -59,31 +59,36 @@ PR #280: [SC-7864] Create credit risk scorecard notebook using XGBoost
 URL: https://github.com/validmind/validmind-library/pull/280
 Labels: enhancement
 --->
-##### Create credit risk scorecard notebook using `XGBoost`
+##### Document credit risk scorecard models using XGBoost
 
-Add new application scorecard notebooks using ML with additional testing
+We've added two new variations to our **Document an application scorecard** notebooks family:
 
-- `application_scorecard_with_ml.ipynb`: running individual tests
-- `application_scorecard_full_suite`: using `run_documentation_tests()`
- 
-Generated PR summary: 
- 
-This release of the ValidMind Library, version 2.7.4, introduces enhancements and bug fixes with a focus on credit risk scorecard modeling. You can now explore two new Jupyter notebooks that demonstrate using the application scorecard model with ValidMind. These notebooks guide you through loading demo datasets, preprocessing data, training models, and documenting them.
+:::: {.flex .flex-wrap .justify-around}
 
-New tests have been added to evaluate different aspects such as feature relevance through mutual information scores, default rates across credit score bands, probability estimates calibration via calibration curves, and threshold optimization for binary classification models. You'll also find tests that illustrate model parameters for transparency and assess the alignment between credit scores and predicted probabilities.
+::: {.w-50-ns .tc}
 
-Enhancements to existing tests improve their functionality and accuracy. Notably, the `TooManyZeroValues` test now considers a row count and percentage threshold for zero values.
+[{{< fa brands github >}} Access Notebooks on GitHub](https://github.com/validmind/validmind-library/blob/main/notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb){.button .button-green target="_blank"}
 
-The dataset splitting functionality in `lending_club.py` is more flexible with support for an optional validation set. A utility function `get_demo_test_config` has been introduced to generate default test configurations for demonstration purposes.
+:::
 
-The update also addresses several bugs by correcting test logic and enhancing test coverage.
+::: {.w-50-ns .tc}
+
+[{{< fa brands github >}} Access Notebooks on GitHub](https://github.com/validmind/validmind-library/blob/main/notebooks/code_samples/credit_risk/application_scorecard_with_ml.ipynb){.button .button-green target="_blank"}
+
+:::
+
+::::
+
+- Learn how to document application scorecard models using the {{< var vm.developer >}}. These notebooks provide a step-by-step guide for loading a demo dataset, preprocessing data, training models, and documenting the model.
+- You can choose from two new approaches: **running individual tests** or **using a single function** to document a model.
+
 
 <!---
 PR #290: [SC-8008] Ongoing monitoring notebook for application scorecard model
 URL: https://github.com/validmind/validmind-library/pull/290
 Labels: enhancement
 --->
-##### Ongoing monitoring notebook for application scorecard model
+##### New ongoing monitoring notebooks for application scorecard models
 
 Add two new notebooks for the scorecard model:
 
