Add step about hovering over attestation schedule & add missing play icon

--- a/site/guide/attestation/set-up-attestations.qmd
+++ b/site/guide/attestation/set-up-attestations.qmd
@@ -145,9 +145,11 @@ For testing purposes only, you can trigger the attestation process:
 
 2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation to test.
 
-3. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **Execute Schedule**.
+3. Under **Scheduling**, hover over an attestation period.
 
-4. Click **Confirm**.
+4. When **{{< fa ellipsis-vertical >}}** appears, select **{{< fa play >}} Execute Schedule**.
+
+5. Click **Confirm**.
 
 After executing the schedule, the dashboard of the model owner displays a banner notification that the attestation is ready to be completed.
 
@@ -157,15 +159,17 @@ After executing the schedule, the dashboard of the model owner displays a banner
 
 2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation period to edit.
 
-3. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select **{{< fa pencil >}} Edit**.
+3. Under **Scheduling**, hover over an attestation period.
 
-4. Make changes to one of the following:
+4. When **{{< fa ellipsis-vertical >}}** appears, select **{{< fa pencil >}} Edit**.
+
+5. Make changes to one of the following:
 
    - Name
    - Start date
    - End date
 
-5. Click **Save Period**.
+6. Click **Save Period**.
 
 Edits to an attestation period will be effective for future occurrences but do not affect previous or in-progress attestation periods.
 
@@ -175,9 +179,11 @@ Edits to an attestation period will be effective for future occurrences but do n
 
 2. Under Workspace Settings, select **{{< fa clipboard-check >}} Attestations** and then click the attestation to remove.
 
-2. Under **Scheduling**, click **{{< fa ellipsis-vertical >}}** and select [**{{< fa trash >}} Remove**]{.red}.
+3. Under **Scheduling**, hover over an attestation period.
 
-3. Click **Delete** to confirm the removal.
+4. When **{{< fa ellipsis-vertical >}}** appears, select [**{{< fa trash >}} Remove**]{.red}.
+
+5. Click **Delete** to confirm the removal.
 
 <!-- TO DO Confirm with Steven that this is correct -->
 ::: {.callout-important title="Removing an attestation period is permanent"}
