User guide updates for attestation (#687)
* Initial draft of attestation docs

* Lowercase terms

* Switch variable

* Turn callout into body text

* Update submit for review step

* Turn callouts into body text and add step

* Turn callout into step

* Turn margin callout into body text

* Simplify process explanation

* Direct users to section under settings

* Add paragraph about planning attestation periods

* Add icons, fix color

* Update site/guide/attestation/working-with-attestations.qmd

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* Add step about hovering over attestation schedule & add missing play icon

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/about/fine-print/data-privacy-policy.qmd
+++ b/site/about/fine-print/data-privacy-policy.qmd
@@ -45,7 +45,7 @@ Access is available through AWS PrivateLink, Azure Private Link, or GCP Private 
 
 When you generate documentation or run tests, {{< var vm.product >}} imports the following artifacts into the documentation via our {{< var validmind.api >}} endpoint integration:
 
-![Artifacts imported into the docuemntation via our {{< var vm.api >}}](overview-api-integration.jpg){width=80% fig-alt="A representation of artifacts imported into the documentation via our Python API"}
+![Artifacts imported into the documentation via our {{< var vm.api >}}](overview-api-integration.jpg){width=80% fig-alt="A representation of artifacts imported into the documentation via our Python API"}
 
 - Metadata about datasets and models, used to look up programmatic documentation content, such as the stored definition for _common logistic regression limitations_ when a logistic regression model has been passed to the {{< var vm.product >}} test suite to be run.
 - Quality and performance metrics collected from datasets and models.
