--- a/site/about/glossary/glossary.qmd
+++ b/site/about/glossary/glossary.qmd
@@ -16,6 +16,7 @@ This glossary of terms provides short definitions for technical terms you find c
 - [Model documentation](#model-documentation)
 - [Validation reports](#validation-reports)
 - [Ongoing monitoring](#ongoing-monitoring)
+- [Attestations](#attestations)
 - [Developer tools](#developer-tools)
 - [Artificial intelligence](#artificial-intelligence)
 
@@ -40,6 +41,10 @@ This glossary of terms provides short definitions for technical terms you find c
 ## Ongoing monitoring
 
 {{< include _monitoring.qmd >}}
+
+## Attestations
+
+{{< include _attestation.qmd >}}
 
 ## Developer tools
 
