--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -83,16 +83,16 @@ listing:
     max-description-length: 250
     sort: false
     fields: [title, description]
+  - id: guides-attestation
+    contents:
+    - attestation/working-with-attestations.qmd
+    type: grid
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
 ---
 
-Our guides offer step-by-step instructions for frequent tasks you perform within the {{< var validmind.platform >}}, organized by category:
-
-- [Onboarding](#onboarding)
-- [Model workflows](#model-workflows)
-- [Model inventory](#model-inventory)
-- [Model documentation](#model-documentation)
-- [Model validation](#model-validation)
-- [Monitoring](#monitoring)
+Our guides offer step-by-step instructions for frequent tasks you perform within the {{< var validmind.platform >}}, organized by category.
 
 ::: {.callout-important collapse="true" appearance="minimal"}
 ## {{< fa building-columns >}} Key {{< var vm.product >}} concepts
@@ -152,6 +152,7 @@ Set up validation guidelines and prepare validation reports, work with findings 
 :::{#guides-model-validation}
 :::
 
+### Reporting
 
 Review reports or export your documentation for external records:
 
@@ -163,4 +164,11 @@ Review reports or export your documentation for external records:
 Regularly evaluate the ongoing accuracy, robustness, and stability of a model after it has been deployed:
 
 :::{#guides-monitoring}
+:::
+
+## Attestation
+
+Document and certify model attributes at specific points in time, supporting compliance and governance processes:
+
+:::{#guides-attestation}
 :::
