Highlights > Documentation done

--- a/site/releases/2025/2025-apr-08/release-notes.qmd
+++ b/site/releases/2025/2025-apr-08/release-notes.qmd
@@ -11,6 +11,15 @@ listing:
     - path: ../../../developer/validmind-library.qmd#for-model-development
       title: "{{< var vm.product >}} for model development {{< fa chevron-right >}}"
       description: "Learn how to use {{< var vm.product >}} for your end-to-end model documentation process based on common model development scenarios with our series of four introductory notebooks."
+  - id: python-api
+    type: grid
+    grid-columns: 1
+    max-description-length: 250
+    contents:
+    - path: ../../../validmind/validmind.qmd
+      title: "{{< var validmind.api >}}"
+      description: "Open reference {{< fa chevron-right >}}"
+    fields: [title, description]
 ---
 
 DON'T FORGET THE SUMMARY
@@ -59,21 +68,27 @@ PR #280: [SC-7864] Create credit risk scorecard notebook using XGBoost
 URL: https://github.com/validmind/validmind-library/pull/280
 Labels: enhancement
 --->
-##### Document credit risk scorecard models using XGBoost
+##### Document credit risk scorecard models using XGBoost*
 
 We've added two new variations to our **Document an application scorecard** notebooks family:
+
+::: {.column-margin}
+
+[{{< fa brands github >}} Access Notebooks on GitHub](https://github.com/validmind/validmind-library/blob/main/notebooks/code_samples/credit_risk/){.button .button-green target="_blank"}
+
+:::
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns .tc}
 
-[{{< fa brands github >}} Access Notebooks on GitHub](https://github.com/validmind/validmind-library/blob/main/notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb){.button .button-green target="_blank"}
+[full suite placeholder](/notebooks/code_samples/credit_risk/application_scorecard_full_suite.ipynb){.button .button-green target="_blank"}
 
 :::
 
 ::: {.w-50-ns .tc}
 
-[{{< fa brands github >}} Access Notebooks on GitHub](https://github.com/validmind/validmind-library/blob/main/notebooks/code_samples/credit_risk/application_scorecard_with_ml.ipynb){.button .button-green target="_blank"}
+[ML placeholder](/notebooks/code_samples/credit_risk/application_scorecard_with_ml.ipynb){.button .button-green target="_blank"}
 
 :::
 
@@ -208,11 +223,18 @@ PR #640: Switch Python API reference to Quarto
 URL: https://github.com/validmind/documentation/pull/640
 Labels: documentation, highlight
 --->
-#### Switch Python API reference to Quarto
+#### Improved {{< var vm.api >}} reference
 
-This release introduces a completely redesigned Python API reference using Quarto instead of the previous HTML-generated docs. The new ValidMind Library documentation features improved navigation with a familiar sidebar, enhanced code signature styling, and integration with our main docs site search.
+We've completely redesigned our {{< var validmind.api >}} reference using the same tools we use to produce the rest of our product documentation, allowing us to more easily keep this information up to date and ensure its accuracy.
 
-The documentation structure mirrors the Python package layout, ensuring backward compatibility with our old Python API reference while providing a more maintainable and reader-friendly experience.
+- Now featuring more intuitive navigation wrapped in a familiar sidebar, enhanced code signature styling, and integration with our main docs site search, these improvements aim to empower users to maximize the potential of the {{< var validmind.developer >}}.
+- The updated reference structure mirrors the Python package layout, ensuring backward compatibility with our old Python API reference while providing a more reader-friendly experience.
+
+::: {.column-margin}
+:::{#python-api}
+:::
+
+:::
 
 
 :::
